--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Ignore all files without an extension
+*
+!*/
+!*.c
+!*.h
+!*.cpp
+!*.py
