Completed start time, finish time, exec time, turnaround time, and wait time for thread 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SRC_DIR src)
 add_executable(OperatingSystems
     ${SRC_DIR}/main.c
     ${SRC_DIR}/ThreadMetric.c
+    ${SRC_DIR}/TimeUtils.c
 )
 
 # Include directories for header files
