--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Prerequisites
 *.d
 
+
+
 # Object files
 *.o
 *.ko
@@ -51,6 +53,9 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+#Ignore Build
+build/
+
 # Ignore all files without an extension
 *
 !*/
@@ -60,5 +65,3 @@ dkms.conf
 !*.py
 !CMakeLists.txt
 
-#Ignore Build
-build/*
