Created safe_sem functions. Created init memory. Created init semaphores and global semaphore variables. Created Queue data structure. Fully functional loadProcess methods created that handles loading to main memory. Added memory display function and enum -> string util. Partial completion of execution of tokenized code logic.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
 Milestone2/src/main
 Milestone2/Program_3.txt
+Milestone2/src/build/cmake_install.cmake
+Milestone2/src/build/CMakeCache.txt
+Milestone2/src/build/Makefile
+Milestone2/src/build/Milestone2OS
+Milestone2/src/build/Program_1.txt
+Milestone2/src/build/CMakeFiles/cmake.check_cache
+Milestone2/src/build/CMakeFiles/CMakeConfigureLog.yaml
+Milestone2/src/build/CMakeFiles/CMakeDirectoryInformation.cmake
+Milestone2/src/build/CMakeFiles/Makefile.cmake
+Milestone2/src/build/CMakeFiles/Makefile2
+Milestone2/src/build/CMakeFiles/progress.marks
+Milestone2/src/build/CMakeFiles/TargetDirectories.txt
+Milestone2/src/build/CMakeFiles/3.31.6/CMakeCCompiler.cmake
+Milestone2/src/build/CMakeFiles/3.31.6/CMakeDetermineCompilerABI_C.bin
+Milestone2/src/build/CMakeFiles/3.31.6/CMakeSystem.cmake
+Milestone2/src/build/CMakeFiles/3.31.6/CompilerIdC/a.out
+Milestone2/src/build/CMakeFiles/3.31.6/CompilerIdC/CMakeCCompilerId.c
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/build.make
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/cmake_clean.cmake
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/compiler_depend.internal
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/compiler_depend.make
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/compiler_depend.ts
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/depend.make
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/DependInfo.cmake
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/FileReader.c.o
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/FileReader.c.o.d
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/flags.make
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/link.d
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/link.txt
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/main.c.o
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/main.c.o.d
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/progress.make
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Queue.c.o
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Queue.c.o.d
+Milestone2/src/Program_1.txt
+Milestone2/src/debug
