THere is an error with fgets()

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Queue.c.o
 Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Queue.c.o.d
 Milestone2/src/Program_1.txt
 Milestone2/src/debug
+Milestone2/src/build/file
