Fixed up main, made semaphores super-global, added blockedResource to PCB.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Queue.c.o.d
 Milestone2/src/Program_1.txt
 Milestone2/src/debug
 Milestone2/src/build/file
+Milestone2/.vscode/settings.json
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Scheduler.c.o.d
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/SchedulerTest.c.o.d
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Task.c.o.d
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/SchedulerTest.c.o
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Task.c.o
+Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Scheduler.c.o
