Fixed all known bugs. Ready to integrate scheduler

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Task.c.o.d
 Milestone2/src/build/CMakeFiles/Milestone2OS.dir/SchedulerTest.c.o
 Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Task.c.o
 Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Scheduler.c.o
+Milestone2/src/build/newFile
