added proper scheduling to main (Ignore Scheduling file)

--- a/Milestone2/src/CMakeLists.txt
+++ b/Milestone2/src/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(Milestone2OS
     main.c
     Queue.c
     FileReader.c
-    Scheduler.c
+    # Scheduler.c
     SchedulerTest.c
     Task.c
     Semaphores.c
