initial GUI for the scheduler

--- a/Milestone2/src/CMakeLists.txt
+++ b/Milestone2/src/CMakeLists.txt
@@ -14,3 +14,11 @@ add_executable(Milestone2OS
     Task.c
     Semaphores.c
 )
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+
+include_directories(${GTK3_INCLUDE_DIRS})
+link_directories(${GTK3_LIBRARY_DIRS})
+add_definitions(${GTK3_CFLAGS_OTHER})
+
+target_link_libraries(Milestone2OS ${GTK3_LIBRARIES})
