--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Milestone2/src/build/CMakeFiles/Milestone2OS.dir/SchedulerTest.c.o
 Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Task.c.o
 Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Scheduler.c.o
 Milestone2/src/build/newFile
+.vscode/
