--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ Milestone2/src/build/CMakeFiles/Milestone2OS.dir/Scheduler.c.o
 Milestone2/src/build/
 .vscode/
 .vscode/settings.json
+.vscode/settings.json
