--- a/Milestone2/CMakeLists.txt
+++ b/Milestone2/CMakeLists.txt
@@ -1,18 +1,20 @@
 cmake_minimum_required(VERSION 3.10)
 
 project(Milestone2OS C)
-set(CMAKE_BUILD_TYPE Debug)
 
 set(CMAKE_C_STANDARD 99)
 
-include_directories(${PROJECT_SOURCE_DIR}/../include)# Add source files
+include_directories(include)
+
+# Add source files
 add_executable(Milestone2OS
-    main.c
-    Queue.c
-    FileReader.c
-    Semaphores.c
-    os_logic.c
+    src/main.c
+    src/Queue.c
+    src/FileReader.c
+    src/Semaphores.c
+    src/os_logic.c
 )
+
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
 
